--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-template-solid",
-  "version": "0.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "test refactor un-destructure SolidJS signal",
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -10,10 +10,10 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "vite": "^2.5.7",
-    "vite-plugin-solid": "^2.0.3"
+    "vite": "^2.8.6",
+    "vite-plugin-solid": "^2.2.6"
   },
   "dependencies": {
-    "solid-js": "^1.1.3"
+    "solid-js": "^1.3.13"
   }
 }
